# notifykit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  devenv.nix  flake.nix  package.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  devenv.yml  release-plz.yml  release.yml
crates/notifykit/: CHANGELOG.md  Cargo.toml  README.md
crates/notifykit/resources/: Info.plist.extra
crates/notifykit/src/: cli.rs  main.rs  notification.rs
crates/notifykit/src/commands/: cchook.rs  mod.rs  send.rs  sounds.rs  test.rs
homebrew/Casks/: notifykit.rb
resources/: Info.plist  NotifyKit.icns
scripts/: bundle.sh  generate-iconset.sh  install  install-nix.sh  install-release.sh  install-remote.sh  install.sh  update-homebrew.sh  verify-bundle-resources.sh
