[package]
name = "notifykit"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "macOS notification CLI with Claude Code hook support"
repository = "https://github.com/macalinao/notifykit"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# macOS notifications
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError"] }
objc2-user-notifications = "0.3"
block2 = "0.6"

# JSON parsing for Claude Code hooks
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

[package.metadata.bundle]
name = "NotifyKit"
identifier = "com.ianm.notifykit"
# NOTE: paths are relative to workspace root, not this file. Always run cargo bundle from workspace root.
icon = ["resources/NotifyKit.icns"]
osx_minimum_system_version = "10.15"
osx_info_plist_exts = ["resources/Info.plist.extra"]
